# cfinterface

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  ROADMAP_REVISED.md  deploy-requirements.txt  dev-requirements.txt  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: benchmark.yml  docs.yml  main.yml  publish.yml
_downloads/29750da81eab0b9bf38b43fc5a450c6e/: plot_versioned_file.ipynb
_downloads/3f729c894635516594e180c04c0a30c4/: plot_register_file.ipynb
_downloads/6435b8aa02809e17ffeb2541166ddaaa/: plot_tabular_parsing.ipynb
_downloads/aae642cdcf51e9b98c5054c53c1c4420/: plot_versioned_file.py
_modules/: index.html
_modules/cfinterface/: storage.html  versioning.html
_modules/cfinterface/components/: block.html  datetimefield.html  defaultblock.html  defaultregister.html  defaultsection.html  field.html  floatfield.html  integerfield.html  line.html  literalfield.html  register.html  section.html  tabular.html
_modules/cfinterface/data/: blockdata.html  registerdata.html  sectiondata.html
_modules/cfinterface/files/: blockfile.html  registerfile.html  sectionfile.html
_sources/: sg_execution_times.rst.txt
_sources/examples/: index.rst.txt  plot_register_file.rst.txt  plot_tabular_parsing.rst.txt  plot_versioned_file.rst.txt  sg_execution_times.rst.txt
_sources/getting_started/: contributing.rst.txt  tutorial.rst.txt
_sources/reference/blocks/: index.rst.txt
_sources/reference/fields/: index.rst.txt
_sources/reference/registers/: index.rst.txt
_sources/reference/sections/: index.rst.txt
_sources/reference/storage/: index.rst.txt
_static/: documentation_options.js
benchmarks/: bench_floatfield_write.py
cfi/: __init__.py
cfi/components/: block.py  defaultblock.py  floatfield.py  integerfield.py  line.py  literalfield.py
cfi/data/: blockdata.py
cfi/files/: blockfile.py  file.py
cfi/reading/: blockreading.py
cfi/writing/: blockwriting.py
cfinterface/: __init__.py  storage.py  versioning.py
cfinterface/_utils/: __init__.py
cfinterface/adapters/: delimitedrepository.py  positionalrepository.py
cfinterface/adapters/components/: repository.py
cfinterface/adapters/field/: repository.py  textualrepository.py
cfinterface/adapters/line/: delimitedrepository.py  positionalrepository.py  repository.py
cfinterface/adapters/reading/: binaryrepository.py  repository.py  textualrepository.py
cfinterface/adapters/writing/: binaryrepository.py  repository.py  textualrepository.py
cfinterface/components/: __init__.py  block.py  datetimefield.py  defaultblock.py  defaultregister.py  defaultsection.py  field.py  floatfield.py  integerfield.py  line.py  literalfield.py  register.py  section.py  state.py  tabular.py
cfinterface/data/: blockdata.py  registerdata.py  sectiondata.py
cfinterface/files/: __init__.py  blockfile.py  registerfile.py  sectionfile.py
cfinterface/reading/: blockreading.py  registerreading.py  sectionreading.py
cfinterface/writing/: blockwriting.py  registerwriting.py  sectionwriting.py
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst
docs/source/getting_started/: contributing.rst  tutorial.rst
docs/source/guides/: architecture.rst  faq.rst  migration-v1.9.rst  performance.rst
docs/source/install/: install.rst
docsrc/source/: conf.py
examples/: README.rst  index.html  plot_block_file.py  plot_register_file.html  plot_register_file.py  plot_section_file.py  plot_tabular_parsing.html  plot_tabular_parsing.py  plot_versioned_file.html  sg_execution_times.html
getting_started/: contributing.html  tutorial.html
install/: install.html
plans/cfinterface-architecture-improvement/: .implementation-state.json  00-master-plan.md  README.md
plans/cfinterface-architecture-improvement/epic-01-remove-pandas-dependency/: 00-epic-overview.md  (+5 more)
plans/cfinterface-quality-and-ci/: .implementation-state.json  00-master-plan.md  README.md
plans/infra-docs-overhaul/: .implementation-state.json  00-master-plan.md  README.md
reference/adapters/: index.html
reference/blocks/: index.html
reference/fields/: index.html
reference/line/: index.html
reference/registers/: index.html
reference/sections/: index.html
reference/storage/: index.html
reference/tabular/: index.html
reference/versioning/: index.html
tests/: conftest.py  test_storage.py  test_storage_deprecation.py  test_versioning.py
tests/_utils/: test_is_null.py
tests/adapters/: test_delimitedepository.py  test_positionalrepository.py
tests/components/: conftest.py  test_block.py  test_datetimefield.py  test_defaultblock.py  test_defaultregister.py  test_defaultsection.py  test_field.py  test_field_hypothesis.py  test_floatfield.py  test_floatfield_benchmark.py  test_integerfield.py  test_line.py  test_literalfield.py  test_register.py  test_section.py  test_storage_integration.py  test_tabular.py  test_tabular_hypothesis.py
tests/data/: test_blockdata.py  test_registerdata.py  test_sectiondata.py
tests/files/: test_binaryfile.py  test_blockfile.py  test_registerfile.py  test_sectionfile.py
tests/mocks/: mock_open.py
tests/performance/: __init__.py  generators.py  profiling.py  reporting.py  runner.py  test_benchmarks.py
tests/reading/: test_blockreading.py  test_registerreading.py  test_sectionreading.py
tests/writing/: test_blockwriting.py  test_registerwriting.py  test_sectionwriting.py
(+171 files in other folders)
