[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfinterface"
dynamic = ["version"]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.3",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "Interface for handling custom formatted files"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "sphinx-rtd-theme",
    "sphinx-gallery",
    "sphinx",
    "numpydoc",
    "plotly",
    "matplotlib",
    "psutil",
    "memory-profiler",
]


[project.urls]
Documentation = "https://rjmalves.github.io/cfinterface/"
Repository = "https://github.com/rjmalves/cfinterface/"

[tool.hatch.version]
path = "cfinterface/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "cfinterface/",
]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "performance: marks tests as performance benchmarks",
    "slow: marks tests as slow running (typically > 10s)",
    "memory: marks tests that stress memory usage",
    "io: marks tests that stress I/O operations"
]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--tb=short",
    "-ra"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
