[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfinterface"
dynamic = ["version"]
dependencies = [
    "numpy>=2.0.0",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "Interface for handling custom formatted files"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.2.3",
]
dev = [
    "hypothesis",
    "matplotlib",
    "mypy",
    "numpydoc",
    "pandas>=2.2.3",
    "pandas-stubs",
    "plotly",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "ruff",
    "sphinx",
    "sphinx-gallery",
    "furo",
]


[project.urls]
Documentation = "https://rjmalves.github.io/cfinterface/"
Repository = "https://github.com/rjmalves/cfinterface/"

[tool.hatch.version]
path = "cfinterface/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "cfinterface/",
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
strict_optional = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=cfinterface",
    "--cov-fail-under=90",
]
markers = [
    "slow: marks tests as slow (> 1s runtime)",
    "benchmark: performance benchmarks (deselect with -m 'not benchmark')",
]
filterwarnings = [
    "error::DeprecationWarning:cfinterface.*",
]

[tool.coverage.run]
source = ["cfinterface"]
omit = ["cfinterface/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "B015", "E501", "F821", "S101", "SIM117", "UP028"]
"benchmarks/**/*.py" = ["E501"]
"examples/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["cfinterface"]
